welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:9: error: expected class or object definition
def point() {baisseBrosse(); leveBrosse()} 
^PictureMono1:11: error: Unmatched closing brace '}' ignored here
}
^